# starfile-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: test.yml
benchmarks/: debug.py
examples/: schema_relion_pipeline.py
python/starfile_rs/: __init__.py  _repr.py  _starfile_rs_rust.pyi  compat.py  components.py  core.py  io.py
python/starfile_rs/schema/: __init__.py  _exception.py  _fields.py  _models.py  _series.py  pandas.py  polars.py
python/tests/: __init__.py  test_parsing.py  test_schema.py  test_stardict.py  test_writing.py
src/: blocks.rs  lib.rs  reader.rs  writer.rs
